--- a/Staticweb/employees.html
+++ b/Staticweb/employees.html
@@ -32,12 +32,17 @@
           <tr>
             <td>102</td>
             <td>Sonia Gandhi</td>
-            <td>55000</td>
+            <td rowspan="2">55000</td>
           </tr>
           <tr>
             <td>103</td>
             <td>Priyanka Gandhi</td>
-            <td>75000</td>
+        
+          </tr>
+          <tr>
+            <td>104</td>
+            <td colspan="2">Modi</td>
+            
           </tr>
         </tbody>
       </table>
